--- a/lrpe-server/build.gradle
+++ b/lrpe-server/build.gradle
@@ -11,10 +11,10 @@ repositories {
 
 dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.3.2'
-    compile 'commons-codec:commons-codec:1.10'
-    compile 'commons-io:commons-io:2.4'
-
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'1.4.2.RELEASE'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.34'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '1.4.2.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '1.4.2.RELEASE'
+    compile group: 'org.abstractj.kalium', name: 'kalium', version: '0.4.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
