--- a/lrpe-client/build.gradle
+++ b/lrpe-client/build.gradle
@@ -2,17 +2,39 @@ group 'com.eso-lrpe'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'gradle-one-jar'
 
 sourceCompatibility = 1.8
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.github.rholder:gradle-one-jar:1.0.4'
+    }
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.3.2'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '1.4.2.RELEASE'
-    compile group: 'org.springframework.boot', name: 'spring-web', version: '1.4.2.RELEASE'
+    compile project(':lrpe-shared')
+
+    // compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.3.2'
+    //compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '1.4.2.RELEASE'
+    //compile group: 'org.springframework.boot', name: 'spring-web', version: '1.4.2.RELEASE'
+
+    // compile 'commons-codec:commons-codec:1.10'
+    // compile 'commons-io:commons-io:2.4'
+    // compile 'com.miglayout:miglayout:3.7.4'
+
+    compile 'com.squareup.okhttp3:okhttp:3.5.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
+}
+
+task oneJar(type: OneJar) {
+    mainClass = 'com.esolrpe.Application'
 }
