--- a/lrpe-client/build.gradle
+++ b/lrpe-client/build.gradle
@@ -24,13 +24,14 @@ dependencies {
 
     // compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.3.2'
     //compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '1.4.2.RELEASE'
-    //compile group: 'org.springframework.boot', name: 'spring-web', version: '1.4.2.RELEASE'
+
 
     // compile 'commons-codec:commons-codec:1.10'
-    // compile 'commons-io:commons-io:2.4'
-    // compile 'com.miglayout:miglayout:3.7.4'
 
+    compile 'commons-io:commons-io:2.4'
+    compile 'com.miglayout:miglayout:3.7.4'
     compile 'com.squareup.okhttp3:okhttp:3.5.0'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
