--- a/lrpe-server/build.gradle
+++ b/lrpe-server/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.34'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '1.4.2.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '1.4.2.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '1.4.2.RELEASE'
     compile group: 'org.abstractj.kalium', name: 'kalium', version: '0.4.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
