--- a/lrpe-server/build.gradle
+++ b/lrpe-server/build.gradle
@@ -17,7 +17,7 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '1.4.2.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '1.4.2.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '1.4.2.RELEASE'
-    compile group: 'org.abstractj.kalium', name: 'kalium', version: '0.4.0'
+    compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.55'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
