--- a/lrpe-client/build.gradle
+++ b/lrpe-client/build.gradle
@@ -37,5 +37,6 @@ dependencies {
 }
 
 task oneJar(type: OneJar) {
-    mainClass = 'com.esolrpe.Application'
+    mainClass = 'com.esolrpe.client.Application'
+    archiveName = 'eso-lrpe-client.jar'
 }
