--- a/lrpe-client/build.gradle
+++ b/lrpe-client/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.miglayout:miglayout:3.7.4'
     compile 'com.squareup.okhttp3:okhttp:3.5.0'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+    compile 'com.github.vatbub:mslinks:1.0.3.1'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
